# sadda

./: .git-blame-ignore-revs  .gitignore  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEVLOG.md  LICENSE-MIT  README.md  THIRD_PARTY_NOTICES.md  justfile  mkdocs.yml  pyproject.toml
.claude/commands/: backlog.md
.github/scripts/: check-no-ai-notation.sh
.github/workflows/: app-release.yml  ci.yml  contribution-policy.yml  docs-images.yml  docs.yml  gate.yml  release.yml
crates/app/: Cargo.toml
crates/app/src/: capture.rs  debug.rs  doc_render.rs  main.rs  playback.rs  sadda_app.rs  state.rs
crates/app/tests/snapshots/: .gitignore
crates/engine/: Cargo.toml
crates/engine/assets/fonts/: README.md
crates/engine/benches/: formants_compositional.rs  mfcc_compositional.rs  pitch_compositional.rs
crates/engine/migrations/: V10__criterion_run_provenance.sql  V11__target.sql  V12__assignment.sql  V13__rubric_version.sql  V14__notebook_entry.sql  V1__phase0_baseline.sql  V2__schema_migrations_provenance.sql  V3__entity_schema.sql  V4__sparse_annotations.sql  V5__derived_signal.sql  V6__processing_run_kind_live_recording.sql  V7__recipe_run.sql  V8__annotation_rubric.sql  V9__criteria.sql
crates/engine/src/: agreement.rs  align.rs  audio.rs  citation.rs  clinical.rs  corpus.rs  criteria.rs  error.rs  g2p.rs  lib.rs  ml.rs  models.rs  pitch.rs  pitch_preset.rs  preset.rs  refdist.rs  syllable.rs  timeline.rs  units.rs
crates/engine/src/corpus/: migrations.rs
crates/engine/src/criteria/: expr.rs  mod.rs
crates/engine/src/dsp/: colormap.rs  formant_preset.rs  formants.rs  intensity.rs  lpc.rs  ltas.rs  mfcc.rs  mod.rs  preset.rs  roots.rs  spectrogram.rs  stft.rs  windowing.rs
crates/engine/src/io/: eaf.rs  figure.rs  mod.rs  tabular.rs  textgrid.rs
crates/engine/src/live/: mod.rs
crates/engine/src/storage/: dense.rs  mod.rs
crates/engine/tests/: README.md  annotation_export_import.rs  clinical_perturbation.rs  dense_tiers.rs  eaf_round_trip.rs  entity_schema.rs  live_recording.rs  mfcc.rs  migrations.rs  ml_embeddings.rs  pitch_boersma.rs  pitch_two_pass.rs  pitch_yin_pyin.rs  recipes.rs  single_writer_lock.rs  sparse_annotations.rs  swipe_pitch.rs  textgrid_round_trip.rs  whisper_mel.rs
crates/engine/tests/clinical/fixtures/: injected.json  pitch_boersma_golden.tsv  pitch_yin_pyin_golden.tsv  praat_golden.tsv
crates/engine/tests/clinical/praat/: README.md  jitter_shimmer.praat  synth_fixtures.py
crates/engine/tests/dsp/librosa/: pitch_yin_pyin.py
crates/engine/tests/dsp/mfcc/: make_mfcc_goldens.py  mfcc_input.tsv  mfcc_kaldi_golden.tsv  mfcc_librosa_golden.tsv  mfcc_praat_golden.tsv
crates/engine/tests/dsp/praat/: pitch_boersma.praat
crates/engine/tests/dsp/swipe/: f0_150_input.tsv  f0_220_input.tsv  f0_330_input.tsv  make_swipe_fixtures.py  run_swipe_octave.m  swipe_golden.tsv
crates/engine/tests/dsp/whisper/: make_whisper_golden.py  whisper_mel_golden.tsv  whisper_mel_input.tsv
crates/engine/tests/ml_fixtures/: make_fixtures.py
crates/engine/tests/ml_fixtures/logmel-embed/: model.onnx  model.toml
crates/engine/tests/ml_fixtures/waveform-embed/: model.onnx  model.toml
crates/python/: Cargo.toml
crates/python/src/: align.rs  formant_preset.rs  lib.rs  live.rs  mfcc_preset.rs  ml.rs  pitch_preset.rs  recipe.rs  refdist.rs
crates/script-engine/: Cargo.toml  README.md
crates/script-engine/src/: lib.rs
crates/uniffi/: Cargo.toml
crates/uniffi/smoke-test/: SmokeTest.swift  run.sh
crates/uniffi/src/: lib.rs
devlog/: 2026-05.md  2026-06.md
docs/: align.md  annotation-cycle.md  cheatsheet.md  index.md  quickstart.md  tts.md
docs/api/: align.md  clinical.md  corpus.md  dsp.md  live.md  ml.md  recipe.md  refdist.md  tts.md
docs/assets/: annotation-cycle.tex  credits.json
docs/assets/css/: oss-thanks.css
docs/assets/js/: oss-thanks.js
docs/lossiness/: eaf.md  textgrid.md
docs/recipes/: overview.py
docs/recipes/assets/: demo.TextGrid
model-registry/: .gitignore  README.md  SCHEMA.md  build_index.py  make_placeholders.py  validate.py
model-registry/.github/workflows/: registry-ci.yml
model-registry/tier2/placeholder-embeddings/: LICENSE  model.toml
model-registry/tier3/placeholder-asr/: LICENSE  model.toml
models-bundled/silero-vad/: README.md
overrides/: main.html
preset-registry/: README.md  SCHEMA.md
python/sadda/: __init__.py  _stability.py  criteria.py
python/sadda/_native/: __init__.pyi
python/sadda/align/: __init__.py  acoustic.py  aligner.py  g2p.py  mfa.py  model.py
python/sadda/asr/: __init__.py  backends.py
python/sadda/clinical/: __init__.py
python/sadda/dsp/: __init__.py
python/sadda/live/: __init__.py
python/sadda/ml/: __init__.py
python/sadda/recipe/: __init__.py
python/sadda/refdist/: __init__.py
python/sadda/tts/: __init__.py  backends.py  pipeline.py  script.py
python/tests/: test_advanced_dsp.py  test_agreement.py  test_align.py  test_annotations.py  test_asr.py  test_assignments.py  test_clinical.py  test_concordance.py  test_corpus.py  test_criteria.py  test_dashboard.py  test_dense_tiers.py  test_dsp.py  test_eaf.py  test_export_import.py  test_figure.py  test_formant_presets.py  test_instruments.py  test_large_file_split.py  test_live.py  test_ltas.py  test_mfa.py  test_mfcc_presets.py  test_ml.py  test_ml_bundled.py  test_models_registry.py  test_notebook.py  test_packages.py  test_pitch_adaptive.py  test_pitch_presets.py  test_provenance.py  test_recipe.py  test_refdist.py  test_refdist_registry.py  test_rubric.py  test_rubric_versions.py  test_stability.py  test_syllable.py  test_targets.py  test_textgrid.py  (+2 more)
refdist-bundled/placeholder-amE-vowels/: data.parquet  provenance.md  refdist.toml
refdist-registry/: README.md  SCHEMA.md  build_index.py  make_placeholders.py  validate.py
refdist-registry/.github/workflows/: registry-ci.yml
refs/: README.md
tools/align/: export_onnx.py
tools/docs/: griffe_source_links.py  source_links.py  test_credits.py  test_griffe_source_links.py  test_source_links.py
(+9 files in other folders)
