[workspace]
resolver = "2"
members = [
    "crates/engine",
    "crates/python",
    "crates/app",
    "crates/uniffi",
    "crates/script-engine",
]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
authors = ["Daniel Brenner <wobaidan@gmail.com>"]
repository = "https://github.com/sadda-speech/sadda"
rust-version = "1.85"
