[workspace]
resolver = "2"
members = [
    "crates/engine",
    "crates/python",
    "crates/app",
    "crates/uniffi",
    "crates/script-engine",
]

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "Apache-2.0 OR MIT"
authors = ["Daniel Brenner <wobaidan@gmail.com>"]
repository = "https://github.com/sadda-speech/sadda"
rust-version = "1.85"

# Optimize the numeric crates even in DEBUG builds, so `cargo run` (debug) is
# usable for audio analysis — unoptimized DSP (FFT / autocorrelation / LPC) runs
# 16–55× slower (DEVLOG 2026-06-01 perf entry). The app + Python crates stay at
# the default debug opt-level (0), so app/binding code remains fully debuggable;
# only the hot DSP code is optimized.
[profile.dev.package.sadda-engine]
opt-level = 3
[profile.dev.package.rustfft]
opt-level = 3
[profile.dev.package.realfft]
opt-level = 3
