[project]
name = "sadda"
version = "0.0.0"
description = "Open-source toolkit for phonetics and speech science research."
readme = "README.md"
license = { text = "Apache-2.0 OR MIT" }
authors = [{ name = "Daniel Brenner", email = "wobaidan@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "crates/python/Cargo.toml"
module-name = "sadda"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.7",
]
