[project]
name = "sadda"
version = "0.3.0"
description = "Open-source toolkit for phonetics and speech-science research."
readme = "README.md"
# PEP 639 license expression (SPDX) + explicit license-files list.
# Both files are listed so maturin's sdist generator includes them in
# the tarball; previously (0.1.0) it only embedded LICENSE-MIT, which
# made PyPI reject the sdist on the License-File metadata check.
license = "Apache-2.0 OR MIT"
license-files = ["LICENSE-APACHE", "LICENSE-MIT"]
authors = [{ name = "Daniel Brenner", email = "wobaidan@gmail.com" }]
keywords = [
    "phonetics",
    "speech",
    "audio",
    "praat",
    "linguistics",
    "dsp",
    "formants",
    "pitch",
    "spectrogram",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "polars>=1.0",
]
classifiers = [
    # PEP 639: the SPDX `license = "..."` field replaces the
    # "License :: OSI Approved :: ..." classifiers; keeping both
    # makes PyPI reject the upload.
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

[project.optional-dependencies]
# `pip install sadda[ml]` pulls ONNX Runtime in alongside sadda; the
# wheel's `sadda.ml` import hook then auto-discovers it (no manual
# ORT_DYLIB_PATH setup). The base install stays lean for users who
# don't need VAD / embeddings. Lower bound matches ort 2.0.0-rc.10's
# expected ORT C API version (22 = ONNX Runtime 1.22).
ml = ["onnxruntime>=1.22"]
# `pip install sadda[download]` is for fetching + running models over the
# network (`load_model("hf://…")`). The fetch is compiled into every wheel
# but stays dormant until you set SADDA_ALLOW_NETWORK=1 — so this extra
# doesn't *enable* the network; it just pulls ONNX Runtime (you download
# models in order to run them), so a freshly downloaded model is
# immediately usable. Same deps as [ml] by design.
download = ["sadda[ml]"]

[project.urls]
Homepage = "https://sadda-speech.github.io/sadda/"
Documentation = "https://sadda-speech.github.io/sadda/"
Repository = "https://github.com/sadda-speech/sadda"
Issues = "https://github.com/sadda-speech/sadda/issues"
Changelog = "https://github.com/sadda-speech/sadda/blob/main/CHANGELOG.md"

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "crates/python/Cargo.toml"
module-name = "sadda._native"
python-source = "python"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = [
    "maturin>=1.7",
    "pytest>=8",
    # tools/docs/test_griffe_source_links.py imports griffe (distribution
    # `griffelib`) to unit-test the source-link extension. The full docs build
    # (docs.yml) installs it via a separate `uv pip install`, but CI's pytest
    # runs off `uv sync`, so it must be a declared test dep or collection fails
    # with ModuleNotFoundError. Matches the version pinned in docs.yml.
    "griffelib>=2.0.2",
]
