[package]
name = "sadda-app"
description = "Desktop GUI for the sadda speech-analysis toolkit (egui + wgpu)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "sadda-app"
path = "src/main.rs"

[dependencies]
sadda-engine = { path = "../engine" }
# `persistence` enables the eframe Storage trait the welcome screen's
# recent-projects list and the window-state restore both ride on.
eframe = { version = "0.34", features = ["persistence"] }
egui_plot = "0.35"
rfd = "0.17"
serde = { version = "1", features = ["derive"] }
# Matplotlib-faithful viridis / magma / greyscale colormaps for the B3
# spectrogram. Pure Rust, no native deps, ~50 KB.
colorous = "1"
# C5 audio playback uses cpal's *output* side (same crate version
# the engine + python crate already pull in for E1's input path).
cpal = "0.17"
# E8 embedded-CPython script panel. Reuses the Phase-0 crate
# that already validated the embed end-to-end.
sadda-script-engine = { path = "../script-engine" }
