[package]
name = "sadda-app"
description = "Desktop GUI for the sadda speech-analysis toolkit (egui + wgpu)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "sadda-app"
path = "src/main.rs"

[dependencies]
# E11: `ml` on for the app too (the VAD measure-track lane). load-dynamic
# keeps the binary lean; the app starts fine without ONNX Runtime and the
# VAD lane shows a hint instead of crashing if it isn't present.
sadda-engine = { path = "../engine", features = ["ml"] }
# `persistence` enables the eframe Storage trait the welcome screen's
# recent-projects list and the window-state restore both ride on.
eframe = { version = "0.34", features = ["persistence"] }
egui_plot = "0.35"
rfd = "0.17"
serde = { version = "1", features = ["derive"] }
# Matplotlib-faithful viridis / magma / greyscale colormaps for the B3
# spectrogram. Pure Rust, no native deps, ~50 KB.
colorous = "1"
# C5 audio playback uses cpal's *output* side (same crate version
# the engine + python crate already pull in for E1's input path).
cpal = "0.17"
# H1 recording modal uses the same SPSC ringbuffer the engine's
# live module exposes via `LiveSession::take_producer`.
rtrb = "0.3"
# E8 embedded-CPython script panel. Reuses the Phase-0 crate
# that already validated the embed end-to-end.
sadda-script-engine = { path = "../script-engine" }
# E9 in-app `sadda.app` namespace. Direct pyo3 dep needed so
# `append_to_inittab!` is in scope; auto-initialize matches the
# script-engine's feature set so both share one interpreter.
pyo3 = { version = "0.28", features = ["auto-initialize"] }
