[package]
name = "sadda-app"
description = "Desktop GUI for the sadda speech-analysis toolkit (egui + wgpu)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "sadda-app"
path = "src/main.rs"

[dependencies]
# E11: `ml` on for the app too (the VAD measure-track lane). load-dynamic
# keeps the binary lean; the app starts fine without ONNX Runtime and the
# VAD lane shows a hint instead of crashing if it isn't present.
# `download` (implies `ml`) lets the app fetch acoustic models via the engine's
# `hf://` resolver for native forced alignment (A5); the fetch stays dormant
# until network is explicitly allowed. `ml` alone still runs a locally-present model.
sadda-engine = { path = "../engine", features = ["ml", "download"] }
# `persistence` enables the eframe Storage trait the welcome screen's
# recent-projects list and the window-state restore both ride on.
eframe = { version = "0.34", features = ["persistence"] }
egui_plot = "0.35"
rfd = "0.17"
serde = { version = "1", features = ["derive"] }
# Matplotlib-faithful viridis / magma / greyscale colormaps for the B3
# spectrogram. Pure Rust, no native deps, ~50 KB.
colorous = "1"
# C5 audio playback uses cpal's *output* side (same crate version
# the engine + python crate already pull in for E1's input path).
cpal = "0.17"
# H1 recording modal uses the same SPSC ringbuffer the engine's
# live module exposes via `LiveSession::take_producer`.
rtrb = "0.3"
# PNG encoding for the `SADDA_DEBUG` F12 screenshot capture (see
# `debug.rs`). Already in the tree transitively; PNG-only keeps it lean.
image = { version = "0.25", default-features = false, features = ["png"] }
# E8 embedded-CPython script panel. Reuses the Phase-0 crate
# that already validated the embed end-to-end.
sadda-script-engine = { path = "../script-engine" }
# E9 in-app `sadda.app` namespace. Direct pyo3 dep needed so
# `append_to_inittab!` is in scope; auto-initialize matches the
# script-engine's feature set so both share one interpreter.
pyo3 = { version = "0.28", features = ["auto-initialize"] }
# Adaptive signal-cache budget: POSIX `sysconf` for total physical RAM
# (Linux + macOS). Already in the tree transitively, so no new build cost;
# non-unix targets fall back to the fixed cap without it.
libc = "0.2"
# Help → Memory report: cross-platform system used/available + this process's
# resident memory. Only the `system` feature (memory + processes); disk /
# network / component / user are off to keep the build lean.
sysinfo = { version = "0.36", default-features = false, features = ["system"] }

[dev-dependencies]
egui_kittest = { version = "0.34", features = ["eframe", "wgpu", "snapshot"] }
# S3: exercise the serde `default`s that keep older persisted state (predating
# the `panes` / `hidden_tier_ids` fields) restoring with everything visible.
# Already a direct engine dependency + in the lockfile, so no new build cost.
serde_json = "1"
