[package]
name = "sadda-engine"
description = "Core engine for the sadda speech-analysis toolkit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arrow = { version = "58", default-features = false }
hound = "3.5"
ndarray = "0.16"
parquet = { version = "58", default-features = false, features = ["arrow", "snap"] }
quick-xml = "0.40"
realfft = "3"
rusqlite = { version = "0.32", features = ["bundled"] }
rustfft = "6"
sha2 = "0.10"
thiserror = "2"
