[package]
name = "sadda-engine"
description = "Core engine for the sadda speech-analysis toolkit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arrow = { version = "58", default-features = false }
cpal = "0.17"
hound = "3.5"
ndarray = "0.16"
parquet = { version = "58", default-features = false, features = ["arrow", "snap"] }
quick-xml = "0.40"
realfft = "3"
rtrb = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
rustfft = "6"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }

# F10 single-writer-lock PID liveness check (kill(pid, 0)) on UNIX.
# Windows uses a direct FFI shim inline in corpus.rs (no extra dep).
[target.'cfg(unix)'.dependencies]
libc = "0.2"
