[package]
name = "sadda-engine"
description = "Core engine for the sadda speech-analysis toolkit"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
# E11: ONNX-Runtime-backed ML inference. Default OFF so the base engine,
# Python wheel, and app stay lean. `load-dynamic` means ORT is NOT linked
# at build time — it's loaded at runtime from `ORT_DYLIB_PATH` (or the
# system search path), so enabling `ml` adds only the ort bindings (~150
# KB), never the ~23 MB ONNX Runtime, to the binary. See the 2026-05-26
# ort-bundling spike in DEVLOG.
ml = ["dep:ort", "dep:libloading"]
# E12: on-demand model download (HTTP + `hf://` passthrough). Default OFF —
# the base engine + wheel stay network-free (architectural principle #10,
# explicit opt-in for any network feature). Implies `ml` (you download
# models to run them) and pulls `ureq` (rustls TLS, fully sync, no async
# runtime). See the 2026-05-27 E12 network-spike DEVLOG entry.
download = ["ml", "dep:ureq"]

[dependencies]
# E12 on-demand download (feature = "download"). rustls (ring) TLS, no gzip
# /cookies, no async runtime — see the network spike.
ureq = { version = "3", optional = true, default-features = false, features = ["rustls"] }
arrow = { version = "58", default-features = false }
# E11 ML inference (feature = "ml"). load-dynamic: no build-time ORT
# download/link; the runtime ONNX Runtime is resolved at load time.
ort = { version = "=2.0.0-rc.10", optional = true, default-features = false, features = ["load-dynamic", "ndarray"] }
# E11: probe the ONNX Runtime dylib for loadability before invoking `ort`,
# which otherwise *panics* on a missing runtime. Already in the `ort`
# (load-dynamic) tree; declared directly so the probe can use it.
libloading = { version = "0.8", optional = true }
cpal = "0.17"
# C7 reference-distribution cache: per-OS data dir (~/.local/share/sadda).
directories = "5"
hound = "3.5"
ndarray = "0.16"
# `zstd` is needed alongside `snap`: polars' `write_parquet` (used by the
# refdist data files + the C9 scaffolder) defaults to zstd, so the D10
# refdist readers must decode it. `snap` stays for the B3 dense-tier
# sidecars the engine writes itself.
parquet = { version = "58", default-features = false, features = ["arrow", "snap", "zstd"] }
quick-xml = "0.40"
realfft = "3"
rtrb = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
rustfft = "6"
# Structured instrument calibration (A3) serialized to/from the
# `instrument.calibration` TEXT column. Both already in the lock tree.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
# C7 reference-distribution manifest parsing (refdist.toml) + project.toml
# refdist pins.
toml = "0.8"
uuid = { version = "1", features = ["v4"] }

# F10 single-writer-lock PID liveness check (kill(pid, 0)) on UNIX.
# Windows uses a direct FFI shim inline in corpus.rs (no extra dep).
[target.'cfg(unix)'.dependencies]
libc = "0.2"
