[package]
name = "sadda-python"
description = "PyO3 bindings for the sadda speech-analysis toolkit; built into the `sadda` Python module via maturin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "sadda"
crate-type = ["cdylib", "rlib"]

[dependencies]
sadda-engine = { path = "../engine" }
# NOTE: extension-module is enabled via pyproject.toml's [tool.maturin]
# section when building the wheel; keeping it off here avoids unifying it
# across the workspace (which would break crates/script-engine's
# auto-initialize embedding mode).
pyo3 = { version = "0.28" }
numpy = "0.28"
