[package]
name = "sadda-python"
description = "PyO3 bindings for the sadda speech-analysis toolkit; built into the `sadda` Python module via maturin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
# Cargo defaults the [lib] name to the snake-cased package name
# (sadda_python). The pyo3 module symbol is `_native` (matches the
# #[pymodule] fn name); maturin places the compiled extension at
# python/sadda/_native.<tag>.so per `module-name` in pyproject.toml.
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"

[dependencies]
sadda-engine = { path = "../engine" }
# NOTE: extension-module is enabled via pyproject.toml's [tool.maturin]
# section when building the wheel; keeping it off here avoids unifying it
# across the workspace (which would break crates/script-engine's
# auto-initialize embedding mode).
pyo3 = { version = "0.28" }
numpy = "0.28"
ndarray = "0.16"
pyo3-stub-gen = "0.22"
