[package]
name = "sadda-python"
description = "PyO3 bindings for the sadda speech-analysis toolkit; built into the `sadda` Python module via maturin"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
# Cargo defaults the [lib] name to the snake-cased package name
# (sadda_python). The pyo3 module symbol is `_native` (matches the
# #[pymodule] fn name); maturin places the compiled extension at
# python/sadda/_native.<tag>.so per `module-name` in pyproject.toml.
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stub_gen"
path = "src/bin/stub_gen.rs"

[dependencies]
# E11: `ml` on by default for the shipped wheel — exposes `sadda.ml`.
# load-dynamic keeps the wheel lean (ONNX Runtime is an optional runtime
# sidecar); `sadda.ml.vad` returns a clean error if ORT isn't present.
# `download` (implies `ml`) compiles the on-demand `hf://` model fetch into
# the wheel — but it never touches the network unless the user opts in via
# SADDA_ALLOW_NETWORK (gated in engine::models), so the default install
# stays network-free. The desktop app deliberately does NOT enable this
# (see crates/app/Cargo.toml): the GUI stays network-free by construction.
sadda-engine = { path = "../engine", features = ["download"] }
# NOTE: extension-module is enabled via pyproject.toml's [tool.maturin]
# section when building the wheel; keeping it off here avoids unifying it
# across the workspace (which would break crates/script-engine's
# auto-initialize embedding mode).
pyo3 = { version = "0.28" }
numpy = "0.28"
ndarray = "0.16"
pyo3-stub-gen = "0.22"
# E1 live recording: cpal Stream + rtrb are required here (not in
# sadda-engine) because engine::live keeps itself free of audio-hardware
# dependencies so its integration tests can run on a headless CI.
cpal = "0.17"
rtrb = "0.3"
