[package]
name = "sadda-script-engine"
description = "Embedded CPython runtime for the sadda desktop app — runs Python scripts inside the Rust process"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
pyo3 = { version = "0.28", features = ["auto-initialize"] }
