[package]
name = "sadda-uniffi"
description = "UniFFI bindings for the sadda speech-analysis toolkit (mobile / cross-language FFI)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
name = "sadda_uniffi"
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
sadda-engine = { path = "../engine" }
uniffi = { version = "0.31", features = ["cli"] }
